--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.0.0
   get: ^4.6.5
   flutter_staggered_grid_view: ^0.6.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
