--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,11 @@ dependencies:
   neopop: ^1.0.2
   cloud_firestore: ^4.8.1
   http: ^1.0.0
+  lottie: ^2.4.0
   get: ^4.6.5
   flutter_staggered_grid_view: ^0.6.2
   fluttertoast: ^8.2.2
+  firebase_database: ^10.2.3
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/Image.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/lotties/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
